assets/css/generic.css
html{
  width:100%;
  height:100%;
}

html{
    font-size: 10px;
    box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

*{
  box-sizing: border-box;
}

body{ 
  margin: 0;
  padding:  0;
  letter-spacing: 1px;
  width: 100%;
  height: 100%;
  font-size: 18px;
  font-family: "fira_mono", "fira_sans", sans-serif, verdana;
  color: #5D5D5D;
  overflow: hidden;
  position: relative;
}

ul{
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a ,a:visited ,a:hover ,a:active{
  color:inherit;
  text-decoration: none;
  cursor: pointer;
}

svg *{
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-touch-callout: none;
    user-select: none; 
}

svg{
  margin: 0;
  padding: 0;
}

body [hideItIfMobile]{
  display: none;
}

body [showItIfMobile]{
  display: block;
}

.section{
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  left: 0;
  right: 0;
  display: none;
}

.section-show{
  display: flex !important;
}
@media screen and (max-height: 400px) {
  .section-show{
    display: block !important;
    overflow-y: auto;
    overflow-x: hidden;
  }
}

img.emoji {
  height: 1em;
  width: 1em;
  margin: 0 2px 0 2px;
  vertical-align: -0.1em;
}

.unselectable {
  user-select: none;
}


.landscape-overlay {
  width: 100%;
  position: absolute;
  z-index: 10000;
  height: 100%;
  display: none;

}
.landscape-overlay .content {
  font-size: 4rem;
  height: 100%;

}
.landscape-overlay .content img{
  height: 50%;
}
html[orientation="landscape"] .landscape-overlay {
  display: block;
}

[wide]{
  width: 100%;
}

[opacity="65"] {
  opacity: .65;
}

[scroll-y]{
    overflow:hidden;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
}
[scroll-x]{
    overflow:hidden;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
}

noscript a {
  color: #005189 !important;
}

.footer{
    z-index: 3000;
    height: 15rem;
    width: 100%;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 0;
    position: absolute;
    display: none;
  } 

.footer_wrapper{
  height: 100%;
}

.nano > .nano-pane {
  background: rgba(255,255,255,.10);
  margin-right: .5rem;
}
.nano > .nano-pane > .nano-slider {
  background: white;
  background: rgba(255,255,255,.25);
}


#mainLoader{
  position: fixed;
  background-color: #2D3A4D;
  z-index: 9999;
  width: 100%;
  height: 100%;
  display: flex;
  align-items:center;
  justify-content:center;
}

